syntax = "proto3";

package device;

service DeviceService {
  rpc Health (HealthRequest) returns (HealthResponse);
}

message HealthRequest {}

message HealthResponse {
  string mac = 1;
  double cpuLoad = 2;
  double memoryUsage = 3;
  string softwareVersion = 4;
  int32 id = 5;
  string name = 6;
}